# recipe-backend

./: .gitignore  Cargo.toml
migration/src/: lib.rs  m20250914_000001_create_table.rs
src/: api_response.rs  main.rs  service.rs
src/entities/: mod.rs  prelude.rs  recipe.rs
