[package]
name = "food-recepies"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.31"
tokio = "1.47.1"
sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
serde = { version ="1.0.221", features = ["derive"] }
serde_json = "1.0.144"
